# Copyninja

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  doctor.sh  install.sh  uninstall.sh
.github/workflows/: release.yml
src/: config.rs  content.rs  main.rs  storage.rs  sync.rs
src/daemon/: dbus.rs  mod.rs  session.rs  wayland.rs  x11.rs
src/picker/: app.rs  css.rs  mod.rs  paste.rs
