[package]
name = "copyninja"
version = "1.0.0"
edition = "2021"
description = "Lightweight clipboard history manager for Linux (Wayland & X11)"

[dependencies]
gtk4 = "0.9"
glib = "0.20"
gdk4 = "0.9"
gio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
clap = { version = "4", features = ["derive"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
